@@ -5,6 +5,7 @@
  373520 Crash when creating a new score, if no article is selected. (Carl Roth)
  373523 Thread scoring is too slow (Carl Roth)
  375405 Corrupted uudecode output with Pan 0.119 (Shantanu Goel)
+ 378973 CVS Compile problem uulib/fptools.c (Rinaldi J. Montessi)
 
 0.119 "Karma Hunters"
  373193 'get headers' menu adds xover task to bottom of queue (Bigfoot)
